fixed link spacing and color

--- a/style.css
+++ b/style.css
@@ -224,3 +224,10 @@ footer {
 #index-text{
     margin: 30px;
 }
+
+.links{
+    color: #6994c5;
+    margin: 25px;
+    display: block;
+}
+
